fix scrollbar style for firefox user

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
   box-sizing: border-box;
 }
 
+/* for firefox user */
+* {
+  scrollbar-color: rgb(114, 113, 113) transparent;
+  scrollbar-width: thin;
+}
+
 a {
   text-decoration: none;
   color: black;
